<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.task.TaskFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/textViewName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/textViewDescription"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/textViewDate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/textViewTimeStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewTimeFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/textViewTimeFinish"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/buttonDelete"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>