<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.task.AddTaskFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAdding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="start"
            android:text="@string/textViewAddingTask"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/textViewName"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/textViewDescription"
            android:inputType="textPersonName"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:enabled="false"
                android:hint="@string/textViewDate"
                android:inputType="date"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/buttonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.05"
                android:background="@drawable/ic_baseline_calendar_today_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTimeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:hint="@string/textViewTimeStart"
                android:inputType="time"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/buttonTimeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.05"
                android:background="@drawable/ic_baseline_access_time_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextTimeFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.95"
                android:hint="@string/textViewTimeFinish"
                android:inputType="time"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/buttonTimeFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.05"
                android:background="@drawable/ic_baseline_access_time_24" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/buttonSave"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/buttonBack"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>